2019-11-13  Jiufu Guo  <guojiufu@linux.ibm.com>

	PR target/92465
	* gcc.dg/pr47763.c: Add option -fweb.

2019-11-12  Nathan Sidwell  <nathan@acm.org>

	* g++.dg/cpp0x/using-enum-2.C: Adjust expected error text.
	* g++.dg/cpp0x/using-enum-3.C: Likewise.
	* g++.dg/lookup/using4.C: Likewise.
	* g++.dg/lookup/using7.C: Likewise.
	* g++.dg/template/using12.C: Likewise.
	* g++.dg/template/using18.C: Likewise.
	* g++.dg/template/using22.C: Likewise.

2019-11-12  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/92449
	* gcc.c-torture/compile/pr92449.c: New test.
	* gcc.target/powerpc/pr92449-1.c: New test.

2019-11-12  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/92470
	* gfortran.dg/ISO_Fortran_binding_17.c: New.
	* gfortran.dg/ISO_Fortran_binding_17.f90: New.
	* gfortran.dg/ISO_Fortran_binding_1.c (elemental_mult_c, allocate_c,
	section_c, select_part_c): Update for CFI_{address} changes;
	add asserts.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92412
	* gcc.dg/strlenopt-91.c: New test.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/35503
	* gcc.dg/tree-ssa/builtin-sprintf-warn-23.c: New test.

2019-11-12  Nathan Sidwell  <nathan@acm.org>

	* g++.dg/lookup/pr6936.C: Delete, identical to using38.C

2019-11-12  Ilya Leoshkevich  <iii@linux.ibm.com>

	PR rtl-optimization/92430
	* gcc.dg/pr92430.c: New test (from Arseny Solokha).

2019-11-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92461
	* gcc.dg/torture/pr92461.c: New testcase.

2019-11-12  Martin Liska  <mliska@suse.cz>

	* gcc.dg/completion-3.c: Append = to all expected
	results and sort expected output.
	* gcc.dg/pr83620.c: Update error message.
	* gcc.dg/spellcheck-params-2.c: Likewise.
	* gcc.dg/spellcheck-params.c: Likewise.
	* gcc.misc-tests/help.exp: Update expected output.

2019-11-12  Maciej W. Rozycki  <macro@codesourcery.com>
	    Tobias Burnus  <tobias@codesourcery.com>
	    Frederik Harwath  <frederik@codesourcery.com>